--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit
-llama-index
+llama-index-core
 llama-index-llms-gemini
 llama-index-embeddings-gemini
+llama-index-readers-file
 pypdf
+google-generativeai
