--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ llama-index-llms-gemini
 llama-index-embeddings-gemini
 llama-index-readers-file
 pypdf
-google-generativeai
+google-generativeai>=0.8.3
